jia-core做代码规范整改，改成用gradle做依赖包管理，并升级版本。